--- a/app/views/travel/index.html.erb
+++ b/app/views/travel/index.html.erb
@@ -2,6 +2,11 @@
   <div class="row">
     <div class="col-lg-12 mt-5">
 
+    	<% if flash[:alert] %>
+        	<div class="alert alert-warning"><%= flash[:alert] %></div>
+      	<% end %>
+
+
       <div class="mx-auto mt-5" style="width: 400px">
         <%= form_with(url: travel_search_path, method: 'get', local: true) do %>
           <div class="form-group">
@@ -11,7 +16,7 @@
           <%= button_tag 'Search', class: 'btn btn-success btn-block' %>
         <% end %>
       </div>
-      
+
     </div>
   </div>
 </div>
